--- a/consumer-service/src/main/resources/application.properties
+++ b/consumer-service/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=consumer-service
 server.port=9000
+
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/consumer
+spring.r2dbc.username=root
+spring.r2dbc.password=123456789
+
