--- a/consumer-service/pom.xml
+++ b/consumer-service/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>r2dbc-mysql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version>
+        </dependency>
     </dependencies>
 
     <build>
